--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,13 +4,19 @@ version: "3"
 tasks:
   default:
     cmds:
-      - goimports -w .
-      - go mod tidy
-      - go fmt ./...
       - task: install
       - task: test
 
-  install: go install ./cmd/...
+  install:
+    cmds:
+      - task: fmt
+      - go install ./cmd/...
+
+  fmt:
+    cmds:
+      - goimports -w .
+      - go mod tidy
+      - go fmt ./...
 
   test:
     cmds:
@@ -19,14 +25,21 @@ tasks:
   record:
     cmds:
       - task: install
-      - rm -f atkins_demo.cast atkins_demo.gif
-      - asciinema rec -t "Atkins CI runner example" -c "task run" atkins_demo.cast
-      - $HOME/.cargo/bin/agg atkins_demo.cast atkins_demo.gif
+      - rm -f atkins.cast atkins.gif
+      - asciinema rec --cols 80 --rows 30 -t "Atkins CI runner example" -c "task run" atkins.cast
+      - $HOME/.cargo/bin/agg atkins.cast atkins.gif
 
   run:
     cmds:
+      - task: install
       - atkins -file test/pipelines/atkins.yml
 
   run:error:
     cmds:
+      - task: install
       - atkins -file test/pipelines/atkins-err.yml
+
+  test:detach:
+    cmds:
+      - task: install
+      - atkins -file test-detach.yml
