Summarize main jobs

--- a/tests/depends_on.yml
+++ b/tests/depends_on.yml
@@ -19,4 +19,5 @@ tasks:
     depends_on: [fmt, test:build]
     steps:
       - for: "item in $(ls ./bin/*.test)"
+        summarize: true
         run: ${{ item }}
