Get summarize to work for nested steps, return stack trace with error

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,7 +10,7 @@ tasks:
   install:
     cmds:
       - task: fmt
-      - go install ./cmd/...
+      - go install -trimpath ./cmd/...
 
   fmt:
     silent: true
