--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -12,17 +12,9 @@ tasks:
       - which atkins || go install .
       - atkins install
 
-  fmt:
-    silent: true
-    cmds:
-      - goimports -w .
-      - go mod tidy
-      - go fmt ./...
-
-  test:
-    cmds:
-      - gotestsum ./... -- -count 1
-      - task: test:fixtures
+  release: atkins release
+  fmt: atkins fmt
+  test: atkins test
 
   record:
     cmds:
@@ -45,19 +37,9 @@ tasks:
     cmds:
       - $HOME/.cargo/bin/agg atkins.cast atkins.gif
 
-  run:
-    cmds:
-      - task: install
-      - atkins -file test/pipelines/atkins.yml
-
-  run:error:
-    cmds:
-      - task: install
-      - atkins -file test/pipelines/atkins-err.yml
-
   test:fixtures:
     cmds:
-      - atkins -file tests/detach.yml
-      - atkins -file tests/depends_on.yml
-      - atkins -file tests/root_jobs.yml
-      - atkins -file tests/nested.yml
+      - ./tests/detach.yml
+      - ./tests/depends_on.yml
+      - ./tests/root_jobs.yml
+      - ./tests/nested.yml
