Fix some build/release issues, yaml decode

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -20,7 +20,7 @@ tasks:
 
   record:
     cmds:
-      - task: install
+      - task: update
       - rm -rf examples ; mkdir -p examples
       - task: record:fixtures
 
