--- a/ci/examples.yml
+++ b/ci/examples.yml
@@ -10,7 +10,7 @@ vars:
 jobs:
   default:
     steps:
-      - cmd: termshot --filename examples/atkins.run.png -- atkins
+      - cmd: termshot --filename examples/atkins.run.png atkins
       - cmd: termshot --filename examples/atkins.list.png -- atkins -l
       - for: test in ["detach", "depends_on", "root_jobs", "nested"]
         cmds:
