Add topological evaluation to vars, expand atkins with -w (workdir)

--- a/.atkins.yml
+++ b/.atkins.yml
@@ -68,6 +68,7 @@ jobs:
       - goimports-reviser -set-alias -format -imports-order "std,blanked,general,company,project" -excludes "scripts/" ./...
       - gofumpt -w .
       - go mod tidy
+      - go-fsck lint ./...
 
   test:simple:
     desc: "Simple go test with gotestsum (passthru)"
